--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -6,7 +6,7 @@
 <%= render partial: "users/link_index", locals: { reviews: @reviews, recommended: @recommended, recommended_user: @recommended_user, books: @books, user: @user } %>
 
 
-<table class=' table table-hover table-inverse order_table_text'>
+<table class=' table table-hover table-inverse'>
 	<thead>
 		<tr>
 			<th>書籍画像</th>
