--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+/* 書籍詳細 レイアウト調整(show) */
+.book-shelves-form {
+	padding-top: 10px;
+}
+
+.rakuten-link-field {
+	padding-top: 10px;
+}
+
+.review-form {
+	margin-bottom: 60px;
+}
