--- a/app/views/books/_new_review.html.erb
+++ b/app/views/books/_new_review.html.erb
@@ -1,11 +1,17 @@
 
 <%= form_with model: review, method: :post, local: true do |f| %>
-  <%= f.label :title, "レビュータイトル" %>
-  <%= f.text_field :title %>
-  <%= f.label :title, "レビュー文" %>
-  <%= f.text_area :text %>
+　<div class="form-group">
+		<%= f.label :title, "レビュータイトル" %>
+	  <%= f.text_field :title, class: "form-control" %>
+  </div>
+  <div class="form-group">
+  	<%= f.label :title, "レビュー文" %>
+    <%= f.text_area :text, class: "form-control" %>
+  </div>
   <% book_details.each do |book_detail| %>
 	  <%= f.hidden_field :book_id, :value => book_detail.isbn %>
   <% end %>
-  <%= f.submit "レビューを送信" %>
+  <div class="action">
+  	<%= f.submit "レビューを送信" %>
+  </div>
 <% end %>
