--- a/app/views/books/_reviews.html.erb
+++ b/app/views/books/_reviews.html.erb
@@ -1,9 +1,28 @@
 
 <% reviews.each do |review| %>
-  <table class=' table table-hover table-inverse order_table_text'>
-  	<tr><td>-------------------------</td></tr>
-		<tr><td>タイトル:<%= review.title %></td></tr>
-		<tr><td>本文:<%= review.text %></td></tr>
+	<table class=' table table-hover table-inverse'>
+  	<thead>
+  		<tr>
+  			<th>投稿ユーザー</th>
+  			<th>タイトル</th>
+  			<th>本文</th>
+  			<th></th>
+  		</tr>
+  	</thead>
+  	<tbody>
+  		<tr>
+  			<td>
+  				<%= attachment_image_tag review.user, :image, size: "100x100", format: "jpg" %><br>
+  				<%= review.user.nickname %>
+  			</td>
+  			<td><%= review.title %></td>
+  			<td><%= review.text %></td>
+  			<td>
+  				<% if current_user %>
+  				  <%= link_to '削除する',  review_path(review), method: :delete, remote: true, class: "btn btn-sm btn-danger" %>
+  				<% end %>
+  			</td>
+  		</tr>
+  	</tbody>
 　</table>
-<%= link_to '削除する',  review_path(review), method: :delete, remote: true, class: "btn btn-md btn-danger" %>
 <% end %>
