--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,26 @@
 <h4>ユザー一覧</h4>
-<% @users.each do |user| %>
-　<%= link_to(user_path(user.id), class: 'list-content') do %>
-  <div><%= attachment_image_tag user, :image, size: "100x100", format: "jpg" %></div>
-		<table class=' table table-hover table-inverse order_table_text'>
-			<tr>
-				<td><%= user.nickname %></td>
-				<td><%= user.gender %> / <%= user.age %> / <%= user.profession %></td>
-			</tr>
-			<tr><td><%= user.profile %></td></tr>
-	  </table>
+<table class=' table table-hover table-inverse'>
+	<thead>
+		<tr>
+			<th colspan="2">ユーザー名</th>
+			<th>性別</th>
+			<th>年齢</th>
+			<th>職業</th>
+			<th>プロフィール</th>
+		</tr>
+	</thead>
+	<% @users.each do |user| %>
+  	<%= link_to(user_path(user.id), class: 'list-content') do %>
+	  	<tbody>
+	  		<tr>
+	  			<td><%= link_to ( attachment_image_tag user, :image, size: "100x100", format: "jpg" ), user_path(user) %></td>
+	  			<td><%= link_to user.nickname, user_path(user) %></td>
+	  			<td><%= user.gender %></td>
+	  			<td><%= user.age %></td>
+	  			<td><%= user.profession %></td>
+	  			<td><%= user.profile %></td>
+	  		</tr>
+	  	</tbody>
+	  <% end %>
   <% end %>
-<% end %>
+</table>
