--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/* トップ画面レイアウト調整 */
+.size {
+	height: 400px;
+    width :100%;
+}
+
+.top-image-field {
+	padding-top: 30px;
+}
+
+.login {
+	margin-bottom: 10px;
+}
