--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,7 +1,15 @@
 <div class="row">
-	<div class="col-xs-6">
+	<div class="col-xs-5">
+		<div class="top-image-field">
+      <div id="theTarget">
+        <div class="b"><img class="size" src="assets/test1.jpg"></div>
+        <div class="b"><img class="size" src="assets/test2.jpg"></div>
+        <div class="b"><img class="size" src="assets/test3.jpg"></div>
+        <div class="b"><img class="size" src="assets/test4.jpg"></div>
+      </div>
+    </div>
 	</div>
-	<div class="col-xs-6">
+	<div class="col-xs-6 col-xs-offset-1">
 		<div class="row about">
 			<h2>ようこそ、わくわくブックへ</h2>
       <p>1.会員登録無しで書籍の検索とレビューを元に購入が出来ます。</p>
@@ -31,8 +39,8 @@
 		</div>
 		<div class="row login">
 			<h3>さっそく会員登録/ログインをする</h3>
-      <%= link_to "会員登録", new_user_registration_path, class: "btn btn-success col-xs-6" %>
-      <%= link_to "ログイン", new_user_session_path, class: "btn btn-info col-xs-6" %>
+      <%= link_to "会員登録", new_user_registration_path, class: "btn btn-success col-xs-5" %>
+      <%= link_to "ログイン", new_user_session_path, class: "btn btn-info col-xs-5 col-xs-offset-1" %>
 		</div>
 	</div>
 </div>
