--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -2,10 +2,10 @@
 	<div class="col-xs-5">
 		<div class="top-image-field">
       <div id="theTarget">
-        <div class="b"><img class="size" src="assets/test1.jpg"></div>
-        <div class="b"><img class="size" src="assets/test2.jpg"></div>
-        <div class="b"><img class="size" src="assets/test3.jpg"></div>
-        <div class="b"><img class="size" src="assets/test4.jpg"></div>
+        <div><img class="size" src="assets/img1.jpg"></div>
+        <div><img class="size" src="assets/img2.jpg"></div>
+        <div><img class="size" src="assets/img3.jpg"></div>
+        <div><img class="size" src="assets/img4.jpg"></div>
       </div>
     </div>
 	</div>
@@ -44,4 +44,3 @@
 		</div>
 	</div>
 </div>
-
