--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 　　<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
-　　<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   </head>
 
-  <header class="navbar navbar-black header">
+  <header class="navbar navbar-black header" style="background-color:#afeeee;">
     <div class="container">
       <nav class="navbar-header navbar-left">
         <%= link_to root_path do %>
@@ -45,10 +45,9 @@
     </div>
   </body>
 
-  <footer class="footer">
+  <footer class="footer fixed-bottom" style="background-color:#afeeee;">
     <div class="container">
       <p class="text-muted">@CopyRight NaganoCake.inc</p>
     </div>
   </footer>
 </html>
-
