--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,11 +16,7 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+
 
 /* ヘッダー・フッター設定 */
 html {
@@ -29,17 +25,15 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin: 60px;
+     margin: 60px 0 60px 0;
 }
 
-.header {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 60px;
-  background-color: #afeeee;
+.header{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 60px;
 }
-
 
 .footer {
   position: absolute;
