--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -13,5 +13,10 @@
 }
 
 .login {
-	margin-bottom: 10px;
+	padding: 10px;
+}
+
+/* slick一瞬の画像表示も無効 */
+#theTarget.slick-initialized {
+    display: block;
 }
