--- a/app/views/recommended_books/_user.html.erb
+++ b/app/views/recommended_books/_user.html.erb
@@ -20,9 +20,9 @@
 					<td>
 						<% partner_id = recommended_book.recommended_user_id  %>
 　　　　　　 <% partner = User.find(partner_id)  %>
-　　　　　　 <%= attachment_image_tag partner, :image, size: "100x100", format: "jpg" %></br>
+　　　　　　 <%= attachment_image_tag partner, :image, size: "100x100", format: "jpg", fallback:"no_image.jpg " %>            </br>
             <%= partner.nickname %>
-        　</td>
+			    </td>
           <td><%= image_tag(item.medium_image_url) %></td>
           <td><%= item.title %><br><%= item.title_kana %></td>
 					<td><%= item.author %><br><%= item.author_kana %></td>
