--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
 	<h4>プロフィール</h4>
 	<div class="row profile-field">
 		<div class="col-xs-2">
-			<%= attachment_image_tag @user, :image, size: "200x180", format: "jpg" %>
+			<%= attachment_image_tag @user, :image, size: "200x180", format: "jpg", fallback:"no_image.jpg" %>
 		</div>
 		<div class="col-xs-9 col-xs-offset-1">
 			<table class="table table-inverse">
