--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -2,10 +2,10 @@
 	<div class="col-xs-5">
 		<div class="top-image-field">
       <div id="theTarget">
-        <div><img class="size" src="assets/img1.jpg"></div>
-        <div><img class="size" src="assets/img2.jpg"></div>
-        <div><img class="size" src="assets/img3.jpg"></div>
-        <div><img class="size" src="assets/img4.jpg"></div>
+        <div><%= image_tag asset_path("img1.jpg", alt: "book-image"), class: "size" %></div>
+        <div><%= image_tag asset_path("img2.jpg", alt: "library-image"), class: "size" %></div>
+        <div><%= image_tag asset_path("img3.jpg", alt: "kids-image"), class: "size" %></div>
+        <div><%= image_tag asset_path("img4.jpg", alt: "Consultation-image"), class: "size" %></div>
       </div>
     </div>
 	</div>
