--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,5 +16,6 @@
 
 <% if @books.present? %>
   <%= render "books/book", books: @books, books_full: @books_full  %>
+<% else %>
+  <p class="text-danger"><%= flash[:notice] %></p>
 <% end %>
-<p class="text-danger"><%= flash[:notice] %></p>
