--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 
-<p class="text-danger"><%= flash[:notice] %></p>
+<p class="text-success"><%= flash[:notice] %></p>
 
 <h4>登録情報</h4>
 <!-- ユザーに関するの書籍レビュー/おすすめ数へのリンク -->
