--- a/app/views/books/_new_review.html.erb
+++ b/app/views/books/_new_review.html.erb
@@ -1,11 +1,25 @@
+<% if review.errors.any? %>
+    <div>
+        <h2><%= pluralize(review.errors.count, "error") %> prohibited this book from being saved:</h2>
+
+        <ul>
+            <% review.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+        </ul>
+    </div>
+<% end %>
+
 
 <%= form_with model: review, method: :post, local: true do |f| %>
 　<div class="form-group">
 		<%= f.label :title, "レビュータイトル" %>
+    <em>　2文字以上、50文字以内でお願いします。</em>
 	  <%= f.text_field :title, class: "form-control" %>
   </div>
   <div class="form-group">
   	<%= f.label :title, "レビュー文" %>
+    <em>　10文字以上、600文字以内でお願いします。</em>
     <%= f.text_area :text, class: "form-control" %>
   </div>
   <% book_details.each do |book_detail| %>
