--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,17 @@
 <h4>編集</h4>
+
+<% if @user.errors.any? %>
+    <div>
+        <h2><%= pluralize(@user.errors.count, "error") %> prohibited this book from being saved:</h2>
+
+        <ul>
+            <% @user.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+        </ul>
+    </div>
+<% end %>
+
 <%= form_with model: @user ,url: user_path(@user) , method: :patch, local: true do |f| %>
   <div class="field">
     <%= f.label :image, "ユーザー画像" %>
