URL Direct hit Invalid

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,4 +1,5 @@
 <div class="row">
+	<p class="text-success"><%= flash[:notice] %></p>
 	<div class="col-xs-5">
 		<div class="top-image-field">
       <div id="theTarget">
