--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,7 +15,7 @@
       </div>
       <!-- 楽天フォームへ -->
       <div clas="rakuten-link-field">
-        <%= link_to "楽天で本を買う" , book_detail.item_url, class:"btn btn-sm btn-success rakuten-link-field" %>
+        <%= link_to "楽天で本を買う" , book_detail.item_url, class: "btn btn-sm btn-success rakuten-link-field", style: "color:white;" %>
       </div>
     </div>
     <div class="col-xs-8">
