--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,7 @@
   <header class="navbar navbar-black header" style="background-color:#afeeee;">
     <div class="container">
       <nav class="navbar-header navbar-left">
-        <%= link_to root_path do %>
-          <h2>わくわくブック</h2>
-        <% end %>
+        <h2><%= link_to "わくわくブック", root_path%></h2>
       </nav>
       <nav>
         <ul class="nav navbar-nav navbar-right">
