--- a/app/views/recommended_books/_recommended_user.html.erb
+++ b/app/views/recommended_books/_recommended_user.html.erb
@@ -30,7 +30,7 @@
 						タイトル : <%= recommended_book.title %><br>
 						本文 : <%= recommended_book.text %>
 					</td>
-					<td><%= link_to "詳細情報",  book_path(item.isbn), class: "btn btn-md btn-info" %></td>
+					<td><%= link_to "詳細情報",  book_path(item.isbn), class: "btn btn-md btn-info", style: "color:white;" %></td>
         </tr>
 			</tbody>
 	  <% end %>
