--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -31,7 +31,7 @@
 						タイトル : <%= review.title %><br>
 						本文 : <%= review.text %>
 					</td>
-					<td><%= link_to "詳細情報",  book_path(item.isbn), class: "btn btn-md btn-info" %></td>
+					<td><%= link_to "詳細情報",  book_path(item.isbn), class: "btn btn-md btn-info", style: "color:white;" %></td>
 				<tr>
 			</tbody>
 	    <% end %>
