Layout change top

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -13,6 +13,10 @@
   display: inline-block;
 }
 
+.bookshelves {
+  margin: 20px;
+}
+
 /* 本棚一覧のレイアウト調整(show) */
 .book_shelf_books {
   float: left;
