--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,15 +29,17 @@ html {
   position: relative;
   min-height: 100%;
 }
+
 body {
   /* Margin bottom by footer height */
-     margin: 60px 0 60px 0;
+     margin: 120px 0 120px 0;
 }
 
 .header{
     position: absolute;
     top: 0;
     width: 100%;
+    margin-bottom: 10px;
     height: 60px;
 }
 
@@ -47,6 +49,7 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
+  margin-top: 10px;
   background-color: #afeeee;
 }
 
