--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,10 +9,10 @@
 <div class="profile-info">
 	<h4>プロフィール</h4>
 	<div class="row profile-field">
-		<div class="col-xs-2">
+		<div class="col-md-12 col-lg-2">
 			<%= attachment_image_tag @user, :image, size: "200x180", format: "jpg", fallback:"no_image.jpg" %>
 		</div>
-		<div class="col-xs-9 col-xs-offset-1">
+		<div class="col-md-12 col-md-offset-1 col-lg-9">
 			<table class="table table-inverse">
 			  <tr><td>名前 : <%= @user.nickname %></td></tr>
 			  <tr><td>性別 : <%= @user.gender %></td></tr>
@@ -38,7 +38,7 @@
 		<% books = RakutenWebService::Books::Book.search(isbn: book_shelf.book_id.to_i) %>
 			<div class="book_shelf_books clearfix">
 				<% books.each do |book| %>
-				  	<div><%= link_to (image_tag(book.medium_image_url)), book_path(book_shelf.book_id.to_i) %><br>
+				  	<div class="col-xs-12"><%= link_to (image_tag(book.medium_image_url)), book_path(book_shelf.book_id.to_i) %><br>
 				  	<%= book.title %></div>
 					<% if @user.id == current_user.id %>
 					  <div><%= link_to "削除",  book_shelf_path(id: book_shelf.id), method: :delete, remote: true, class: "btn btn-xs btn-danger btn-block", style: "color:white;" %></div>
