--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,6 +1,7 @@
 
 
 <h4>検索結果:<%= books_full.count %>件</h4>
+<p>★商品画像やタイトルをクリックすると、書籍の詳細ページに移動します。</p>
 <table class="table table-striped">
 	<thead>
 		<tr>
