--- a/app/views/books/_new_review.html.erb
+++ b/app/views/books/_new_review.html.erb
@@ -20,7 +20,7 @@
   <div class="form-group">
   	<%= f.label :title, "レビュー文" %>
     <em>　10文字以上、600文字以内でお願いします。</em>
-    <%= f.text_area :text, class: "form-control" %>
+    <%= f.text_area :text, size: "10x5" %>
   </div>
   <% book_details.each do |book_detail| %>
 	  <%= f.hidden_field :book_id, :value => book_detail.isbn %>
