--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -40,8 +40,8 @@
 		</div>
 		<div class="row login">
 			<h3>さっそく会員登録/ログインをする</h3>
-	        <%= link_to "会員登録", new_user_registration_path, class: "btn btn-success col-lg-5 col-sm-12", style: "color:white;"%>
-	        <%= link_to "ログイン", new_user_session_path, class: "btn btn-info col-lg-5 col-lg-offset-1 col-sm-12", style: "color:white;" %>
+	        <%= link_to "会員登録", new_user_registration_path, class: "btn btn-success col-xs-5", style: "color:white;"%>
+	        <%= link_to "ログイン", new_user_session_path, class: "btn btn-info col-xs-5 col-xs-offset-1", style: "color:white;" %>
 		</div>
 	</div>
 </div>
