--- a/app/views/recommended_books/_review.html.erb
+++ b/app/views/recommended_books/_review.html.erb
@@ -1,35 +1,39 @@
+<div class="table-responsive">
+	<p>★商品画像やタイトルをクリックすると、書籍の詳細ページに移動します。</p>
+    <p>★オススメする書籍が決定したら、緑の「書籍決定」ボタンをクリックしてください。</p>
+	<table class='table table-hover table-inverse order_table_text'>
+		<thead>
+			<tr>
+				<th>書籍確定</th>
+				<th>書籍画像</th>
+				<th>書籍タイトル / カナ</th>
+				<th>著者名 / カナ</th>
+				<th>出版社名</th>
+				<th>レビュー文</th>
+			<tr>
+		</thead>
 
-<table class=' table table-hover table-inverse order_table_text'>
-	<thead>
-		<tr>
-			<th>書籍画像</th>
-			<th>書籍タイトル / カナ</th>
-			<th>著者名 / カナ</th>
-			<th>出版社名</th>
-			<th>レビュー文</th>
-			<th>書籍確定</th>
-		    <th>書籍詳細</th>
-		<tr>
-	</thead>
-
-  　<% reviews.each do |review| %>
-	　　<% books = RakutenWebService::Books::Book.search(isbn: review.book_id.to_i) %>
-  　　　<% books.each do |item| %>
-			<tbody>
-				<tr>
-					<td><%= image_tag(item.medium_image_url) %></td>
-					<td><%= item.title %><br><%= item.title_kana %></td>
-					<td><%= item.author %><br><%= item.author_kana %></td>
-					<td><%= item.publisher_name %></td>
-					<td>
-						タイトル : <%= review.title %><br>
-						本文 : <%= review.text %>
-					</td>
-					<td><%= link_to "書籍決定",  finish_recommended_book_path(id: recommended_user.id, book_id: review.book_id), class: "btn btn-md btn-success", style: "color:white;" %></td>
-					<td><%= link_to "詳細情報",  book_path(item.isbn), class: "btn btn-md btn-info", style: "color:white;" %></td>
-				<tr>
-			</tbody>
-	    <% end %>
-	<% end %>
-	<%= paginate reviews, class: "paginate" %>
-</table>
+	  　<% reviews.each do |review| %>
+		　　<% books = RakutenWebService::Books::Book.search(isbn: review.book_id.to_i) %>
+	  　　　<% books.each do |item| %>
+				<tbody>
+					<tr>
+						<td><%= link_to "書籍決定",  finish_recommended_book_path(id: recommended_user.id, book_id: review.book_id), class: "btn btn-md btn-success", style: "color:white;" %></td>
+						<td><%= link_to image_tag(item.medium_image_url), book_path(item.isbn) %></td>
+						<td>
+							<%= link_to item.title, book_path(item.isbn)%><br>
+							<%= link_to item.title_kana, book_path(item.isbn) %>
+						</td>
+						<td><%= item.author %><br><%= item.author_kana %></td>
+						<td><%= item.publisher_name %></td>
+						<td>
+							タイトル : <%= review.title %><br>
+							本文 : <%= review.text %>
+						</td>
+					<tr>
+				</tbody>
+		    <% end %>
+		<% end %>
+		<%= paginate reviews, class: "paginate" %>
+	</table>
+</div>
