--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -5,36 +5,37 @@
 <!-- ユザーに関するの書籍レビュー/おすすめ数へのリンク -->
 <%= render partial: "users/link_index", locals: { reviews: @reviews, recommended: @recommended, recommended_user: @recommended_user, books: @books, user: @user } %>
 
+<p>★商品画像やタイトルをクリックすると、書籍の詳細ページに移動します。</p>
 
-<table class=' table table-hover table-inverse'>
-	<thead>
-		<tr>
-			<th>書籍画像</th>
-			<th>書籍タイトル / カナ</th>
-			<th>著者名 / カナ</th>
-			<th>出版社名</th>
-			<th>レビュー文</th>
-		    <th>書籍詳細</th>
-		<tr>
-	</thead>
+<div class="table-responsive">
+	<table class=' table table-hover table-inverse'>
+		<thead>
+			<tr>
+				<th>書籍画像</th>
+				<th>書籍タイトル / カナ</th>
+				<th>著者名 / カナ</th>
+				<th>出版社名</th>
+				<th>レビュー文</th>
+			<tr>
+		</thead>
 
-  　<% @reviews.each do |review| %>
-	　　<% books = RakutenWebService::Books::Book.search(isbn: review.book_id.to_i) %>
-  　　　<% books.each do |item| %>
-			<tbody>
-				<tr>
-					<td><%= image_tag(item.medium_image_url) %></td>
-					<td><%= item.title %><br><%= item.title_kana %></td>
-					<td><%= item.author %><br><%= item.author_kana %></td>
-					<td><%= item.publisher_name %></td>
-					<td>
-						タイトル : <%= review.title %><br>
-						本文 : <%= review.text %>
-					</td>
-					<td><%= link_to "詳細情報",  book_path(item.isbn), class: "btn btn-md btn-info", style: "color:white;" %></td>
-				<tr>
-			</tbody>
-	    <% end %>
-	<% end %>
-	<%= paginate @reviews, class: "paginate" %>
-</table>
+	  　<% @reviews.each do |review| %>
+		　　<% books = RakutenWebService::Books::Book.search(isbn: review.book_id.to_i) %>
+	  　　　<% books.each do |item| %>
+				<tbody>
+					<tr>
+						<td><%= link_to image_tag(item.medium_image_url), book_path(item.isbn) %></td>
+						<td><%= link_to item.title, book_path(item.isbn) %><br><%= link_to item.title_kana, book_path(item.isbn) %></td>
+						<td><%= item.author %><br><%= item.author_kana %></td>
+						<td><%= item.publisher_name %></td>
+						<td>
+							タイトル : <%= review.title %><br>
+							本文 : <%= review.text %>
+						</td>
+					<tr>
+				</tbody>
+		    <% end %>
+		<% end %>
+		<%= paginate @reviews, class: "paginate" %>
+	</table>
+</div>
