--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <% if @user.is_valid == false %>
-	<h4 class="text-danger">このユーザーは退会となりました</h4>
+	<h4 class="text-danger">このユーザーは退会となりました。</h4>
 <% else %>
 	<p class="text-success"><%= flash[:notice] %></p>
 
