--- a/app/views/recommended_books/finish.html.erb
+++ b/app/views/recommended_books/finish.html.erb
@@ -3,8 +3,9 @@
 <h5 style="font-weight:bold"><%= @recommended_user.nickname %>さんへ</h5>
 <!-- エラーメッセージ -->
 <% if @recommended_book.errors.any? %>
-    <div id="error_explanation">
-        <h2><%= pluralize(@recommended_book.errors.count, "error") %> prohibited this book from being saved:</h2>
+  <div class="alert alert-danger">
+    <div>
+        <h2><%= pluralize(@recommended_book.errors.count, "件") %> のエラーです。</h2>
 
         <ul>
             <% @recommended_book.errors.full_messages.each do |message| %>
@@ -12,6 +13,7 @@
             <% end %>
         </ul>
     </div>
+  </div>
 <% end %>
 
 <%= form_with model: @recommended_book , method: :post, local: true do |form| %>
