--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,10 +17,10 @@
 		  		<tr>
 		  			<td class="col-xs-2"><%= link_to ( attachment_image_tag user, :image, size: "100x100", format: "jpg", fallback:"no_image.jpg" ), user_path(user) %></td>
 		  			<td class="col-xs-2"><%= link_to user.nickname, user_path(user) %></td>
-		  			<td class="col-xs-1"><%= user.gender.truncate(10, omission: '………') %></td>
+		  			<td class="col-xs-1"><%= user.gender %></td>
 		  			<td class="col-xs-1"><%= user.age %></td>
 		  			<td class="col-xs-2"><%= user.profession %></td>
-		  			<td class="col-xs-4"><%= user.profile.truncate(100, omission: '………') %></td>
+		  			<td class="col-xs-4"><%= user.profile %></td>
 		  		</tr>
 		  	</tbody>
 		  <% end %>
