--- a/app/views/books/_reviews.html.erb
+++ b/app/views/books/_reviews.html.erb
@@ -6,6 +6,7 @@
         <th>投稿ユーザー</th>
         <th>タイトル</th>
         <th>本文</th>
+        <th>投稿日</th>
         <th></th>
       </tr>
     </thead>
@@ -20,6 +21,7 @@
           </td>
           <td><%= review.title %></td>
           <td><%= review.text %></td>
+          <td><%= review.created_at.strftime('%Y/%m/%d %H:%M') %></td>
           <td>
             <% if current_user.id == review.user_id %>
               <%= link_to '削除する',  review_path(review), method: :delete, remote: true, class: "btn btn-sm btn-danger", style: "color:white;" %>
