--- a/app/views/users/_link_index.html.erb
+++ b/app/views/users/_link_index.html.erb
@@ -5,6 +5,7 @@
   	<li><%= link_to "#{ user.nickname }さんのページ", user_path(params[:id]) %></li>
     <li><%= link_to "書籍レビュー #{ reviews.count }件", review_path(params[:id]) %></li>
     <li><%= link_to "オススメ数 #{recommended.count}件", recommended_book_path(params[:id], recommended_patarn: 1) %></li>
-    <li><%= link_to "オススメされ数 #{recommended_user.count}件", recommended_book_path(params[:id], recommended_patarn: 2) %></li>
+    <li>
+      <%= link_to "オススメされ数 #{recommended_user.count}件", recommended_book_path(params[:id], recommended_patarn: 2) %></li>
   </ul>
 </nav>
