--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -15,6 +15,7 @@
 				<th>書籍タイトル / カナ</th>
 				<th>著者名 / カナ</th>
 				<th>出版社名</th>
+				<th>いいね</th>
 				<th>レビュー文</th>
 			<tr>
 		</thead>
@@ -28,6 +29,19 @@
 						<td><%= link_to item.title, book_path(item.isbn) %><br><%= link_to item.title_kana, book_path(item.isbn) %></td>
 						<td><%= item.author %><br><%= item.author_kana %></td>
 						<td><%= item.publisher_name %></td>
+						<td>
+							<% if review.favorited_by?(current_user) %>
+							    <%= link_to review_favorites_path(review), method: :delete, remote: true do %>
+								    <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+								    <%= review.favorites.count %>
+							    <% end %>
+							<% else %>
+							    <%= link_to review_favorites_path(review), method: :post, remote: true do %>
+								    <i class="fa fa-heart-o" aria-hidden="true"></i>
+								    <%= review.favorites.count %>
+							    <% end %>
+							<% end %>
+						</td>
 						<td>
 							タイトル : <%= review.title %><br>
 							本文 : <%= review.text %>
